# openssl-pkcs11-sign-provider

./: .editorconfig  .gitignore  .travis.yml  CHANGES.md  CONTRIBUTING.md  CONTRIBUTING.rst  ChangeLog.md  Makefile.am  README.md  README.rst  configure.ac
.github/workflows/: build.yml
docs/: pkcs11sign_interface.rst
man/: Makefile.am  pkcs11sign.7  pkcs11sign.cnf.5
misc/dbg/: asym.gdb  keymgmt.gdb  provider.gdb  signature.gdb  store.gdb
rpm/: openssl-pkcs11-sign-provider.spec
src/: Makefile.am  asym.c  asym.h  common.c  common.h  consttime.h  debug.c  debug.h  fork.c  fork.h  keyexch.c  keyexch.h  keymgmt.c  keymgmt.h  object.c  object.h  ossl.c  ossl.h  pkcs11.c  pkcs11.h  provider.c  provider.h  signature.c  signature.h  store.c  store.h  uri.c  uri.h
tests/: Makefile.am  helpers.sh  module-test-wrapper  pkcs11sign.cnf.in  setup-ock.sh  tecdhe.c  tfork.c  topenssl  tsignature.c  ttls.c  utils.c  utils.h
